--- a/learn_bibliometrix.Rmd
+++ b/learn_bibliometrix.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Learning bibliometrix"
-author: "ML"
-date: "20/05/2019"
+author: "M.Lagisz"
+date: "04/06/2019"
 output: html_document
 ---
 
@@ -62,15 +62,14 @@ Thus, we will try to run bibliometric analyses on the relevant sample of literat
 
 *The search*
 
-First we need to find a representative sample of academic publications on our topic of choice. For this, we will use cross-disciplianary database of academic literature, Scopus. This database has the largest coverage of the published literature and should give us the most complete picture.   
-Note that we have free access to this database on campus, but you will not be able to access it from outside the campus unless (you use UNSW or other university proxy servers).    
-An alternative database, commonly used for broad academic literature searches and analyses, is Web of Science (https://www.webofknowledge.com/).   
+First, we need to find a representative sample of academic publications on our topic of choice. For this, we will use cross-disciplianary database of academic literature, Scopus. This database has the largest coverage of the published literature and should give us the most complete picture.   
+Note that we have free access to this database on campus, but you will not be able to access it from outside the campus unless (you use UNSW or other university proxy servers). An alternative database, commonly used for broad academic literature searches and analyses, is Web of Science: https://www.webofknowledge.com/.   
 
 
 ****   
 
 ### TASK 1    
-Go to Scopus search page: https://www.scopus.com/search/form.uri?display=basic  and enter "terminal investment" in the basic search window, as follows:  
+Go to Scopus search page: https://www.scopus.com/search/form.uri?display=basic  and enter "terminal investment" (with the quotes) in the basic search window, as follows:  
 ```{r Scopus_TI_res_simple_search, echo=FALSE, fig.cap=" ", out.width='80%'}
 knitr::include_graphics("images/Scopus_TI_res_simple_search.png")
 ```
@@ -126,7 +125,7 @@ knitr::include_graphics("images/Scopus_TI_res_all.png")
 
 ****   
 
-There are over 1,000 records retrieved from the Scopus database (some look relevant and many are not, but thats always the case). On the left of the results window you can see simple filters: year, most common author names, subject areas, etc. You can explore the whole set roughly by using "Analyze search results" link above the table of the hits:   
+There are over 1,000 records retrieved from the Scopus database (some look relevant and many are not, but that is always the case). On the left of the results window you can see simple filters: year, most common author names, subject areas, etc. You can explore the whole set roughly by using "Analyze search results" link above the table of the hits:   
 
 ```{r New_R_markdown_popup, echo=FALSE, fig.cap=" ", out.width='80%'}
 knitr::include_graphics("images/Scopus_TI_res_analaysis.png")
@@ -137,10 +136,11 @@ knitr::include_graphics("images/Scopus_TI_res_analaysis.png")
 
 ### TASK 3    
 
-Next, we will export them for more detailed bibliometric analyses in R. To do so, close the Scopus analyses window to go back to the list of records found. First select all records by clicking box "All" in the left top of the list of references. Then click the "Export" link to the right.    
+Next, we will export the bo=ibliometric records for more detailed bibliometric analyses in R. To do so, close the Scopus analyses window to go back to the list of records found. First, select all records by clicking box "All" in the left top of the list of references. Then click the "Export" link to the right.    
 
-A pop-up window with the export options will appear. First, select the format of the export: we will uses .bib file (BibTex format of references, one of the standard ones).   
-Second, select which fields have to be exported by clicking the boxes on top of each column (or as needed).
+A pop-up window with the export options will appear.   
+First, select the format of the export: we will uses .bib file (BibTex format of references, one of the standard ones).   
+Second, select which fields have to be exported by clicking the boxes on top of each column (or as needed).   
 For bibliometric analyses on the citations among papers, it is essential to tick the box next to "Include references" (i.e. data on the cited documents).   
 
 Note that, unfortunately, Scopus limits number of exported records to 2000. For longer listes of records, you will need to split them in smaller chunks for the export and then merge into a single larger dataset (not covered in this tutorial; WoS export limits are 500 records).    
@@ -152,10 +152,10 @@ knitr::include_graphics("images/Scopus_TI_res_all_export_bib.png")
 
 ****   
 
-Click "Export" button. A file named "Scopus" (with extension matching your export type file e.g. bib) will be saved to your downloads folder.    
+Click "Export" button. A file named "Scopus" (with extension matching your export type file, e.g., bib) will be saved to your downloads folder.    
 Note that when you export references with their reference lists included in the records, the resulting files are quite large (in our case around 16Mb).   
 
-In case you did not succeed expoerting the files (or wish to work with exactly the same ones we used, or you cannot acces Scopus), the files downloaded on 27/05/2019 are provided in the /data subdirectory.   
+In case you did not succeed expoerting the files (or wish to work with exactly the same ones we used, or you cannot acces Scopus), the files downloaded on 27/05/2019 are provided (the standard way os to store them in a "/data" subdirectory).   
 
 
 ****   
@@ -182,17 +182,17 @@ names(bib)
 #write.csv(bib, "data/bib_as_df.csv", row.names = FALSE) #if you want to save this data frame as a csv file
 ```
 
-After some processing, an object called "bib" is created. It contains a data frame with each row corresponsing to one exported publication from Scopus and with each column corresponsing to a field exported from Scopus online database. (Note, if you tried to achieve this by exporting a csv file directly from Scopus, you would get a meessy data frame, due to missing field values shifting the cells between columns). 
+After some processing, an object called "bib" is created. It contains a data frame with each row corresponsing to one exported publication from Scopus and with each column corresponsing to a field exported from Scopus online database. (Note, if you tried to achieve this by exporting a csv file directly from Scopus, you would likely get a meessy data frame, due to missing field values shifting the cells between columns). 
 
 
 ****   
 
 ### TASK 5    
 What are the contents of the columns of our "bib" data frame?  Columns are labelled with a two-letter tags: `r names(bib)`.    
-For a complete lost of field tags used in *bibliometrix* you can have a look at this file:   http://www.bibliometrix.org/documents/Field_Tags_bibliometrix.pdf   
+For a complete list and descriptions of field tags used in *bibliometrix* you can have a look at this file:   http://www.bibliometrix.org/documents/Field_Tags_bibliometrix.pdf   
 Our data frame contains just a subset of these codes. Which ones?   
  
-Note that column **bib$AU** contains authors of each paper (as surenames and initials) separated by semicolon (;). We can split these strings and can extract a list of all author names to a vector:    
+Note that column **bib$AU** contains authors of each paper (as surenames and initials) separated by semicolon (;). We can easily split these strings and can extract a list of all author names to a vector:    
 
 ```{r get author names, eval=TRUE}
 # head(bib$AU) #have a look at the few few records on your sceen
@@ -228,12 +228,11 @@ bib[grep("CORNWELL, W.", bib$CR), c(1:3)] #who is citing?
 
 ### TASK 7    
 
-Luckily, *Bibliometrix* package  has a handy function that summarises the information contained in the "bib" data frame, so we can get some quick facts about our set of papers.   
+Luckily, *bibliometrix* package  has a handy function that summarises the information contained in the "bib" data frame, so we can get some quick facts about our set of papers.   
 
 **Note:** this and the following tasks require quite a bit of computational power, thay may be slow or even halt on your computer.    
 In such case, for this exercise, make your data frame smaller by subsetting it, e.g.:   
-"bib <- bib[1:500, ] #taking first 500 records".   
-This iwill result in different results of your analyses and different plots than presented in this document.   
+"bib <- bib[1:500, ] #taking first 500 records". However, the results and plots you will produce with a subsetted data frame will differ from the ones presented in this document.     
 
 ```{r  descriptive tables, eval=TRUE}
 # Preliminary descriptive analyses 
@@ -241,9 +240,9 @@ results <- biblioAnalysis(bib, sep = ";")
 summary(object = results, k = 10, pause = TRUE) 
 ```
 
-Using summary function on *bibliometrix* results, we get several screens with various tables summarising bibliometric data from our data frame - how many documents, journals, keywords, authors, publicatons timespan, collaboration index, annual publication growth rate, most prolific authors, publications per country, per journal, per keywords, etc.    
+Using summary function on *bibliometrix* results, we can get several screens with various tables summarising bibliometric data from our data frame - how many documents, journals, keywords, authors, publicatons timespan, collaboration index, annual publication growth rate, most prolific authors, publications per country, per journal, per keywords, etc.    
 
-You can plot five of these tables (hit "return"" to displey next graph, and later you can use arrows in the top left of the plots pane to move back and forth between consequtive graphs saved in the RStudio memory):  
+You can automatically plot some of these tables (hit "return"" to displey next graph, and later you can use arrows in the top left of the plots pane to move back and forth between consecutive graphs saved in the RStudio memory):  
 
 ```{r  descriptive plots, eval=TRUE, message=FALSE}
 plot(results, k = 10, pause=TRUE) #this takes top 10 values from each plottable table
@@ -281,15 +280,14 @@ The function *localCitations* generates the frequency table of the **locally** m
 Ten most frequent local cited authors and papers:
 
 ```{r  most cited local authors, eval=TRUE}
-mostcited <- localCitations(bib, sep = ";")
-mostcited$Authors[1:10,]
-mostcited$Papers[1:10,]
+mostcitedLA <- localCitations(bib, results, sep = ";")
+mostcitedLA[1:10]
 ```
 
 
 ****  
 
-## creating bibliometric networks
+## Creating bibliometric networks
 
 So far, we looked only at the numbers - who or what gets cited most, either from the main papers list or from the lists of the references within these papers. Now it is time to look at the actual networks of citations and also other types of networks that can be created using our data set.   
 
@@ -307,7 +305,7 @@ Package *bibliometrix* contains function *biblioNetwork* which makes creating bi
 
 ```{r  paper coupling network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "coupling", network = "references", sep = ";")
-net=networkPlot(NetMatrix,  normalize = "salton", weighted = NULL, n = 10, Title = "Papers' bibliographic coupling", type = "fruchterman", size = 5, size.cex = T, remove.multiple = TRUE, labelsize = 0.5, label.cex = F)
+net = networkPlot(NetMatrix, weighted = NULL, n = 10, Title = "Papers' bibliographic coupling", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
 ```
 
 Above, we plotted only the top 10 most coupled papers (n=10), try increasing this number to 100 (would not recommend further increasing the number of displayed nodes - it gets slow and messy).   
@@ -321,7 +319,7 @@ What happens and why?
 
 ```{r  author coupling network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "coupling", network = "authors", sep = ";")
-net=networkPlot(NetMatrix, normalize = "salton", weighted = NULL, n = 10, Title = "Authors' bibliographic coupling", type = "fruchterman", size = 5, size.cex = T, remove.multiple = TRUE, labelsize = 0.8, label.n = 10, label.cex=F)
+net = networkPlot(NetMatrix, weighted = NULL, n = 10, Title = "Authors' bibliographic coupling", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.8)
 ```
 
 Above, we plotted only the top 10 most coupled authors (n=10), try increasing this number to 100 (would not recommend further increasing the number of displayed nodes to >50 - it gets slow and messy).   
@@ -335,7 +333,7 @@ What happens and why?
 
 ```{r  paper co-citation network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib[1:50,], analysis = "co-citation", network = "references", sep = ";")
-net=networkPlot(NetMatrix, normalize = "salton", weighted=NULL, n = 50, Title = "Papers' co-citations", type = "fruchterman", size = 5, size.cex = T, remove.multiple = TRUE, labelsize = 0.5, label.cex = F)
+net = networkPlot(NetMatrix, weighted=NULL, n = 10, Title = "Papers' co-citations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
 ```
 
 Note that for creating this matrix we only used first 50 papers from our data set - this is because the resulting matrix is a matrix of ALL cited papers and it gets HUGE). Also, we plotted only the top 10 most coupled papers (n=10), try increasing this number to 20 (would not recommend further increasing the number of displayed nodes to >50 - it gets slow and messy).   
@@ -349,7 +347,7 @@ What happens and why?
 
 ```{r  author collaboration network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "collaboration", network = "authors", sep = ";")
-net=networkPlot(NetMatrix,  normalize = "salton", weighted=NULL, n = 10, Title = "Authors' collaborations", type = "fruchterman", size=5, size.cex=T, remove.multiple=TRUE, labelsize=0.5, label.cex=F)
+net = networkPlot(NetMatrix, weighted = NULL, n = 10, Title = "Authors' collaborations", type = "fruchterman", size = 5, remove.multiple = TRUE, labelsize = 0.5)
 ```
 Above, we plotted only the top 10 most collaborating authors (n=10), try increasing this number to 100 (would not recommend further increasing the number of displayed nodes - it gets slow and messy).   
 What happens and why?    
@@ -361,9 +359,9 @@ What happens and why?
 **Country Scientific Collaboration** - we can visualise authors from which countries publish papers together most frequently.   
 
 ```{r  country collaboration network, eval=TRUE}
-bib <- metaTagExtraction(bib, Field = "AU_CO", sep = ";") #we need to extrcat countries from the affiliations first
+bib <- metaTagExtraction(bib, Field = "AU_CO", sep = ";") #we need to extract countries from the affiliations first
 NetMatrix <- biblioNetwork(bib, analysis = "collaboration", network = "countries", sep = ";")
-net=networkPlot(NetMatrix, n = 10, Title = "Country Collaboration", type = "auto", size = TRUE, remove.multiple = FALSE, labelsize = 0.5)
+net = networkPlot(NetMatrix, n = 10, Title = "Country Collaboration", type = "auto", size = TRUE, remove.multiple = FALSE, labelsize = 0.5)
 ```
 Above, we plotted only the top 10 most collaborating countrie (n=10), try increasing this number to 50 (would not recommend further increasing the number of displayed nodes to >100 - it gets slow and messy).   
 What happens and why? 
@@ -376,7 +374,7 @@ What happens and why?
 
 ```{r  keyword co-occurance network, eval=TRUE}
 NetMatrix <- biblioNetwork(bib, analysis = "co-occurrences", network = "keywords", sep = ";")
-net=networkPlot(NetMatrix, n = 50, Title = "Keyword co-occurance", type = "fruchterman", size = T, remove.multiple = FALSE, labelsize = 0.7, edgesize = 5)
+net = networkPlot(NetMatrix, n = 50, Title = "Keyword co-occurance", type = "fruchterman", size = T, remove.multiple = FALSE, labelsize = 0.7, edgesize = 5)
 ```
 
 Try replacing network = "keywords" with network = "author_keywords" and see what happens. You can also try to display fewer/more keywords in the plot.   
@@ -390,7 +388,7 @@ Try replacing network = "keywords" with network = "author_keywords" and see what
 **Co-Word Analysis** - uses the word co-occurrences in a bibliographic collection to map the conceptual structure of research. It works via a separate function *conceptualStructure* that creates a conceptual structure map of a scientific field performing Correspondence Analysis (CA), Multiple Correspondence Analysis (MCA) or Metric Multidimensional Scaling (MDS) and Clustering of a bipartite network of terms extracted from keyword, title or abstract fields of the data frame.   
 
 ```{r  conceptualStructure map, eval=FALSE}
-CS <- conceptualStructure(bib, field = "ID", method = "CA", minDegree = 4, k.max = 8, stemming = FALSE, labelsize = 10, documents = 10)
+CS <- conceptualStructure(bib, field = "ID", minDegree = 20, k.max = 5, stemming = FALSE, labelsize = 10)
 ```
 
 The code above uses field ID, which stands for "conceptualStructure". Try using authors keywords, "DE" field, instead.   
@@ -405,9 +403,9 @@ Is the map different?
 *histNetwork* function calculates a chronological direct citation network matrix which then is plotted using *histPlot*:
 
 ```{r  histNetwork, eval=TRUE, message=FALSE}
-#options(width=130)
-histResults <- histNetwork(bib, min.citations = 10, sep = ";")
-net <- histPlot(histResults, n = 15, size = 20, labelsize = 10, size.cex = TRUE, arrowsize = 0.5, color = TRUE)
+options(width = 130)
+histResults <- histNetwork(bib, n = 100, sep = ";")
+net = histPlot(histResults, labelsize = 2, arrowsize = 0.5)
 ```
 
 
@@ -449,69 +447,8 @@ A <- cocMatrix(bib, Field = "ID", sep = ";")
 ```
 
 
-
-
-
 ```{r old bibliometrix, eval=FALSE, include=FALSE}
-######################################### OLD #############
 
-# Convert to a bibliometric data frame
-bib <- convert2df(tmp, dbsource = "isi", format = "bibtex")
-test <- bib$AU
-test2 <- unlist(strsplit(test, ";"))
-test2 <- test2[order(test2)]z
-#View(test2) #see which names need cleaning
-write.csv(test2, "author_list_uncleaned.csv", row.names = FALSE)
-
-# Do some cleaning (fix author initials)
-test3 <- paste(test, ";", sep="")
-corrected <- gsub("ALLISON D;", "ALLISON DB;", test3, ignore.case = TRUE)
-corrected <- gsub("ANDERSON R;", "ANDERSON RM;", corrected, ignore.case = TRUE)
-corrected <- gsub("AUSTAD S;", "AUSTAD SN;", corrected, ignore.case = TRUE)
-corrected <- gsub("BROOKS R;", "BROOKS RC;", corrected, ignore.case = TRUE)
-corrected <- gsub("CAREY J;", "CAREY JR;", corrected, ignore.case = TRUE)
-corrected <- gsub("CARVALHO G;", "CARVALHO GB;", corrected, ignore.case = TRUE)
-corrected <- gsub("DEBETS A;", "DEBETS AJM;", corrected, ignore.case = TRUE)
-corrected <- gsub("HARSHMAN L;", "HARSHMAN LG;", corrected, ignore.case = TRUE)
-corrected <- gsub("HOEKSTRA R;", "HOEKSTRA RF;", corrected, ignore.case = TRUE)
-corrected <- gsub("INGRAM D;", "INGRAM DK;", corrected, ignore.case = TRUE)
-corrected <- gsub("JENNIONS M;", "JENNIONS MD;", corrected, ignore.case = TRUE)
-corrected <- gsub("KENNEDY B;", "KENNEDY BK;", corrected, ignore.case = TRUE)
-corrected <- gsub("LAMMING D;", "LAMMING DW;", corrected, ignore.case = TRUE)
-corrected <- gsub("LEROI A;", "LEROI AM;", corrected, ignore.case = TRUE)
-corrected <- gsub("MAAS M;", "MAAS MFPM;", corrected, ignore.case = TRUE)
-corrected <- gsub("MCMAHAN C;", "MCMAHAN CA;", corrected, ignore.case = TRUE)
-corrected <- gsub("MUELLER H;", "MULLER HG;", corrected, ignore.case = TRUE)
-corrected <- gsub("MULLER H;", "MULLER HG;", corrected, ignore.case = TRUE)
-corrected <- gsub("PENDERGRASS W;", "PENDERGRASS WR;", corrected, ignore.case = TRUE)
-corrected <- gsub("PIPER MDW;", "PIPER M;", corrected, ignore.case = TRUE)
-corrected <- gsub("PLETCHER S;", "PLETCHER SD;", corrected, ignore.case = TRUE)
-corrected <- gsub("SINCLAIR D;", "SINCLAIR DA;", corrected, ignore.case = TRUE)
-corrected <- gsub("SMITH G;", "SMITH GK;", corrected, ignore.case = TRUE)
-corrected <- gsub("SMITH M;", "SMITH MJ;", corrected, ignore.case = TRUE)
-bib$AU <- corrected #add corrections
-
-#save as a data frame
-write.csv(bib, "bib_as_df.csv", row.names = FALSE)
-
-#look whether some of these names are cited
-grep("SINCLAIR", bib$CR)
-grep("KAEBERLEIN", bib$CR)
-
-##########################################################################################
-# Preliminary descriptive analysis 
-results <- biblioAnalysis(bib, sep = ";")
-summary(object = results, k = 20, pause = FALSE)
-
-#####################  Figure - SKIP  ####################################################
-pdf(file = "bib_4descriptive.pdf", height = 8, width = 8, pointsize=10)
-par(mfrow=c(2,2), mar = c(4,4,1,1))
-plot(results, k = 20, pause=FALSE)
-dev.off()
-
-# What are the most frequently cited manuscripts?
-CR <- citations(bib, field = "article", sep = ".  ")
-str(CR)
 
 #####################  Figure - CO-AUTHORS NETWORK  ####################################################
 pdf(file="Figure_collaboration_network.pdf", width=8, height=8, pointsize=10)
@@ -520,10 +457,6 @@ M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
 NetMatrix <- biblioNetwork(M, analysis = "collaboration", network = "authors", sep = ";")
 net <- networkPlot(NetMatrix, n = 100, cluster="walktrap", Title = "", labelsize = 1, type = "fruchterman", size=TRUE, remove.multiple=TRUE)	
 dev.off() #note, changing n alters the colurs and arrangements of the authors and clusters
-###################################################################################
-
-#Note: countries cannot be extracted from our bib
-
 
 #####################  Figure - HISTORICAL CO-CITATION NETWORK  ####################################################
 pdf(file="Figure_historical_network.pdf", width=8, height=8, pointsize=10)
@@ -532,55 +465,4 @@ M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
 histResults <- histNetwork(M, n=143, sep = ";") # "n" (number of most cited references to select) picked manually, larger numbers give error
 histPlot(histResults, size=TRUE, arrowsize = 0.2) 
 dev.off()
-###################################################################################
-
-
-
-### CITATIONS
-
-#co-ciation network
-M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
-NetMatrix <- biblioNetwork(M, analysis = "co-citation", network = "authors", sep = ";")
-#NetMatrix <- biblioNetwork(M, analysis = "co-citation", network = "references", sep = ";")
-net <- networkPlot(NetMatrix, n = 100, type = "kamada", Title = "Co-Citation", labelsize=0.5) #odd?
-
-## Bipartite network of the existing networkds
-M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
-# Co-Citation network of the existing studies
-CRnet <- cocMatrix(M, Field = "CR", sep = ".  ")
-net <- networkPlot(CRnet, n = 50, labelsize = 0.3, size=TRUE, weighted = TRUE)	
-##### Error in graph.adjacency.sparse(adjmatrix, mode = mode, weighted = weighted, : not a square matrix
-
-### BIBLIOGRAPHIC COUPLING
-NetMatrix <- biblioNetwork (M, analysis = "coupling", network = "references", sep = ";")
-net <- networkPlot(NetMatrix, n = 1000, cluster="walktrap", Title = "Bibliographic Coupling Network", label = FALSE, labelsize = 1, type = "kamada", size=TRUE, remove.multiple=TRUE)	
-# odd - too few connections 
-
-
-###################################################################################
-
-## THEMATIC MAP
-M <- metaTagExtraction(bib, Field = "CR_AU", sep = ";")
-NetMatrix <- biblioNetwork(M, analysis = "co-occurrences", network = "keywords", sep = ";")
-S <- normalizeSimilarity(NetMatrix, type = "association")
-net <- networkPlot(S, n = 500, Title = "co-occurrence network", type="fruchterman", labelsize = 0.7, halo = FALSE, cluster = "walktrap",remove.isolates=FALSE, remove.multiple=FALSE, noloops=TRUE, weighted=TRUE)
-#too dense dont use for plot (try letter with smaller n)
-
-#####################  Figure - THEMATIC MAP  ####################################################
-pdf(file="Figure_thematic_map.pdf",width=8,height=8,pointsize=10)
-net <- networkPlot(S, n = 100, Title = "co-occurrence network", type="fruchterman", labelsize = 0.7, halo = FALSE, cluster = "walktrap",remove.isolates=FALSE, remove.multiple=FALSE, noloops=TRUE, weighted=TRUE)
-res <- thematicMap(net, NetMatrix, S)
-plot(res$map)
-dev.off()
-#########################################################################
-
-#####################  Figure - TOPIC NETWORK  ####################################################
-pdf(file="Figure_topic_network.pdf",width=8,height=8,pointsize=10)
-net <- networkPlot(S, n = 60, Title = "", type="fruchterman", labelsize = 0.7, halo = FALSE, cluster = "walktrap",remove.isolates=FALSE, remove.multiple=FALSE, noloops=TRUE, weighted=TRUE)
-dev.off()
-#########################################################################
-
-#Conceptual structure
-CS <- conceptualStructure(bib, field="AB", minDegree=4, k.max=10, stemming=FALSE, labelsize=10)	#too dense
 ```
-
